# Task-10hw

./: pyproject.toml
hw_project/: db.sqlite3
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: models.py  urls.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/templates/quotes/: base.html  index.html
hw_project/users/: forms.py  urls.py  views.py
hw_project/users/templates/users/: login.html  logout.html  register.html
hw_project/utils/: migration.py
