[tool.poetry]
name = "task 10hw"
version = "0.1.0"
description = ""
authors = ["architect2016 <dnepr.life@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
pymongo = "^4.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
